# MonetGAN

./: CMakeLists.txt  README.md  dataconverter.cpp  dataconverter.h  gen.cpp  generator.cpp  generator.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h
model/: monet.py  test_model.py
